[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lab_twin"                 # distribution name; import remains `lab_twin`
version = "0.1.0"                 # <-- REQUIRED
description = "Digital twin of WGS rare disease workflow"
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["test"]              # your folder is 'test', not 'tests'
addopts = "-q"
